fix display when screen height too short

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ img {
 }
 
 .container-fluid {
-    height: 100vh;
+    min-height: 100vh;
     background-color: #282c34;
     display: flex;
     justify-content: center;
